test/Common/LinkerScriptParsing/Errors/Assignments/MissingWhitespace/Inputs/script1.t
ADDITIONAL_INPUT3= 0x600df00d;
